--- a/src/view/App/App.css
+++ b/src/view/App/App.css
@@ -1,10 +1,31 @@
-.text-center{
+.text-center {
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+  
 }
-.search{
+
+.search {
     display: block;
-    margin: 1px auto;
+    margin: 4px auto;
     font-size: 28px;
     padding: 3px 10px;
     border-radius: 20px;
+}
+
+.card-container {
+    height: 500px;
+    overflow-y: scroll;
+}
+
+.card-container::-webkit-scrollbar {
+    width: 5px;
+}
+
+.full-page {
+    background-color: #4158D0;
+    background-image: linear-gradient(45deg, #4158D0 0%, #f594ef 22%, #7090ff 49%);
+    border-radius: 25px;
+    height: 90vh;
+
 }
