--- a/src/view/App/App.css
+++ b/src/view/App/App.css
@@ -26,6 +26,10 @@
     background-color: #4158D0;
     background-image: linear-gradient(45deg, #4158D0 0%, #f594ef 22%, #7090ff 49%);
     border-radius: 25px;
-    height: 90vh;
-
+    height: 100vh;
+    margin: 0;
+}
+.no-found{
+    position: relative;
+    bottom: 450px;
 }
